Make sure the logo isn't clipped

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -20,7 +20,7 @@ body {
       overflow:hidden;
       display:block;
       width:648px;
-      height:250px;
+      height:255px;
       background:url(unifor-logo.jpg);
       margin:0 auto;
     }
